[b] Fix preview pane broken ui in social graph expanded mode

--- a/src/js/components/social-graph-page/network/network.sass
+++ b/src/js/components/social-graph-page/network/network.sass
@@ -109,6 +109,8 @@ $network-right-sidebar-width: 351px
   .right-section
     width: $network-right-sidebar-width
     height: 100vh
+    overflow: hidden
+    position: relative
     box-sizing: border-box
     float: left
     font-size: 14px
